--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+typing_extensions==4.14.0
 tzdata==2025.2
 uvicorn==0.35.0
 minio==7.2.7
+APScheduler==3.10.4
