refactor: update environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
       DB_ORACLE_PASSWORD: ${DB_ORACLE_PASSWORD}
       DB_ORACLE_DSN: ${DB_ORACLE_DSN}
       MINIO_URL: ${MINIO_URL}
-      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
-      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
       API_LOGIN_ANALYTICS: ${API_LOGIN_ANALYTICS}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
     command: "python app/server.py"
