--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
+      APP_TIMEZONE: 'America/Lima'
       DB_ORACLE_USER: ${DB_ORACLE_USER}
       DB_ORACLE_PASSWORD: ${DB_ORACLE_PASSWORD}
       DB_ORACLE_DSN: ${DB_ORACLE_DSN}
